--- a/core/src/main/deploy-config/production/web.xml
+++ b/core/src/main/deploy-config/production/web.xml
@@ -14,7 +14,7 @@
     </context-param>
     <context-param>
         <param-name>spring.profiles.active</param-name>
-        <param-value>Production</param-value>
+        <param-value>production</param-value>
     </context-param>
 
     <context-param>
@@ -38,22 +38,6 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <filter>
-        <filter-name>OpenSessionInViewFilter</filter-name>
-        <filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
-        <init-param>
-            <param-name>sessionFactoryBeanName</param-name>
-            <param-value>sessionFactory</param-value>
-        </init-param>
-        <init-param>
-            <param-name>flushMode</param-name>
-            <param-value>AUTO</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>OpenSessionInViewFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
 
 
     <servlet>
@@ -69,6 +53,6 @@
     </servlet-mapping>
 
     <welcome-file-list>
-        <welcome-file>web/ns/main</welcome-file>
+        <welcome-file>web/s/main</welcome-file>
     </welcome-file-list>
 </web-app>
