--- a/core/src/main/deploy-config/production/web.xml
+++ b/core/src/main/deploy-config/production/web.xml
@@ -14,7 +14,7 @@
     </context-param>
     <context-param>
         <param-name>spring.profiles.active</param-name>
-        <param-value>production</param-value>
+        <param-value>Production</param-value>
     </context-param>
 
     <context-param>
@@ -37,7 +37,6 @@
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
 
 
     <servlet>
