--- a/core/src/main/deploy-config/dev/web.xml
+++ b/core/src/main/deploy-config/dev/web.xml
@@ -12,10 +12,10 @@
         <param-name>primefaces.FONT_AWESOME</param-name>
         <param-value>true</param-value>
     </context-param>
-<!--    <context-param>-->
-<!--        <param-name>javax.faces.FACELETS_LIBRARIES</param-name>-->
-<!--        <param-value>/WEB-INF/primefaces-sentinel.taglib.xml</param-value>-->
-<!--    </context-param>-->
+    <context-param>
+        <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+        <param-value>/WEB-INF/primefaces-sentinel.taglib.xml</param-value>
+    </context-param>
 <!--    prime theme-->
 
 
