--- a/core/src/main/deploy-config/dev/web.xml
+++ b/core/src/main/deploy-config/dev/web.xml
@@ -53,6 +53,12 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <listener>
+        <listener-class>
+            org.springframework.security.web.session.HttpSessionEventPublisher
+        </listener-class>
+    </listener>
+
 
 
     <servlet>
