--- a/core/src/main/deploy-config/production/web.xml
+++ b/core/src/main/deploy-config/production/web.xml
@@ -3,6 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+    <!--prime theme-->
+    <context-param>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>sentinel</param-value>
+    </context-param>
+    <context-param>
+        <param-name>primefaces.FONT_AWESOME</param-name>
+        <param-value>true</param-value>
+    </context-param>
+    <context-param>
+        <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+        <param-value>/WEB-INF/primefaces-sentinel.taglib.xml</param-value>
+    </context-param>
+    <!--    prime theme-->
+
 
     <context-param>
         <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
@@ -38,6 +53,13 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <listener>
+        <listener-class>
+            org.springframework.security.web.session.HttpSessionEventPublisher
+        </listener-class>
+    </listener>
+
+
 
     <servlet>
         <servlet-name>dispatcher</servlet-name>
@@ -51,7 +73,7 @@
         <url-pattern>/web/s/*</url-pattern>
     </servlet-mapping>
 
-    <welcome-file-list>
-        <welcome-file>web/s/main</welcome-file>
-    </welcome-file-list>
+    <!--    <welcome-file-list>-->
+    <!--        <welcome-file>web/s/main</welcome-file>-->
+    <!--    </welcome-file-list>-->
 </web-app>
