--- a/core/src/main/deploy-config/dev/web.xml
+++ b/core/src/main/deploy-config/dev/web.xml
@@ -25,7 +25,7 @@
     </context-param>
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
-        <param-value>Production</param-value>
+        <param-value>Development</param-value>
     </context-param>
     <context-param>
         <param-name>spring.profiles.active</param-name>
