--- a/core/src/main/deploy-config/dev/web.xml
+++ b/core/src/main/deploy-config/dev/web.xml
@@ -66,6 +66,14 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>restTest</servlet-name>
+        <servlet-class>com.simulator.restTest</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>restTest</servlet-name>
+        <url-pattern>/test</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
