--- a/core/src/main/deploy-config/dev/web.xml
+++ b/core/src/main/deploy-config/dev/web.xml
@@ -81,7 +81,7 @@
         <url-pattern>/web/s/*</url-pattern>
     </servlet-mapping>
 
-<!--    <welcome-file-list>-->
-<!--        <welcome-file>web/s/main</welcome-file>-->
-<!--    </welcome-file-list>-->
+    <welcome-file-list>
+        <welcome-file>web/s/login</welcome-file>
+    </welcome-file-list>
 </web-app>
