--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,33 @@
                             <webXml>src\main\deploy-config\dev\web.xml</webXml>
                         </configuration>
                     </plugin>
+                    <plugin>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-application-conf</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- this is important -->
+                                    <overwrite>true</overwrite>
+                                    <!-- this as well (target/ was missing) -->
+                                    <outputDirectory>${project.build.directory}/${project.artifactId}/WEB-INF/classes/conf</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>src/main/deploy-config/dev</directory>
+                                            <includes>
+                                                <include>applicationConfig.properties</include>
+                                            </includes>
+                                            <filtering>true</filtering>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -71,6 +98,33 @@
                         <configuration>
                             <webXml>src\main\deploy-config\production\web.xml</webXml>
                         </configuration>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-application-conf</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- this is important -->
+                                    <overwrite>true</overwrite>
+                                    <!-- this as well (target/ was missing) -->
+                                    <outputDirectory>${project.build.directory}/${project.artifactId}/WEB-INF/classes/conf</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>src/main/deploy-config/dev</directory>
+                                            <includes>
+                                                <include>applicationConfig.properties</include>
+                                            </includes>
+                                            <filtering>true</filtering>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
