--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,28 @@
                                     </resources>
                                 </configuration>
                             </execution>
+                            <execution>
+                                <id>copy-Log4j</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- this is important -->
+                                    <overwrite>true</overwrite>
+                                    <!-- this as well (target/ was missing) -->
+                                    <outputDirectory>${project.build.directory}/${project.artifactId}/WEB-INF/classes</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>src/main/deploy-config/dev</directory>
+                                            <includes>
+                                                <include>log4j.properties</include>
+                                            </includes>
+                                            <filtering>true</filtering>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
                         </executions>
                     </plugin>
                 </plugins>
@@ -115,9 +137,31 @@
                                     <outputDirectory>${project.build.directory}/${project.artifactId}/WEB-INF/classes/conf</outputDirectory>
                                     <resources>
                                         <resource>
-                                            <directory>src/main/deploy-config/dev</directory>
+                                            <directory>src/main/deploy-config/production</directory>
                                             <includes>
                                                 <include>applicationConfig.properties</include>
+                                            </includes>
+                                            <filtering>true</filtering>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>copy-Log4j</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- this is important -->
+                                    <overwrite>true</overwrite>
+                                    <!-- this as well (target/ was missing) -->
+                                    <outputDirectory>${project.build.directory}/${project.artifactId}/WEB-INF/classes</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>src/main/deploy-config/production</directory>
+                                            <includes>
+                                                <include>log4j.properties</include>
                                             </includes>
                                             <filtering>true</filtering>
                                         </resource>
